# ethos-u-driver-stack-imx

./: .clang-format  .gitignore  CMakeLists.txt  README.md  SCR.txt  setup.py
cmake/toolchain/: aarch64-linux-gnu.cmake
docs/: driver_library_component.puml  driver_library_sequence.puml  kernel_buffer.puml  kernel_inference.puml  kernel_network.puml
driver_library/: CMakeLists.txt
driver_library/include/: ethosu.hpp
driver_library/src/: ethosu.cpp  ethosu_stub.cpp
driver_library/src/autogen/: README.md  tflite_schema.hpp
include/linux/: ethosu.h
kernel/: .gitignore  CMakeLists.txt  Kbuild  Kconfig  ethosu_buffer.c  ethosu_cancel_inference.c  ethosu_cancel_inference.h  ethosu_capabilities.c  ethosu_capabilities.h  ethosu_core_interface.h  ethosu_device.c  ethosu_device.h  ethosu_driver.c  ethosu_inference.c  ethosu_inference.h  ethosu_mailbox.c  ethosu_mailbox.h  ethosu_network.c  ethosu_network.h  ethosu_network_info.c  ethosu_network_info.h  ethosu_watchdog.c  ethosu_watchdog.h
kernel/uapi/: ethosu.h
kernel_driver/include/uapi/: ethosu.h
mailbox/: .clang-format  .gitignore  CMakeLists.txt  Kbuild  Kconfig  arm_mhu.c  arm_mhu_v2.c  mailbox.dtsi
python/: interpreter_wrapper.cpp  label_image.py
remoteproc/: .clang-format  .gitignore  CMakeLists.txt  Kbuild  Kconfig  corstone1000_es_reset.c  ethosu_bridge_reset.c  ethosu_remoteproc.c  juno_fpga_reset.c  remoteproc.dtsi
tools/gcov/: coverage_report.sh  gather_on_test.sh
tools/linters/: uncrustify_kernel.cfg
tools/mknod/: mknod.sh
utils/: CMakeLists.txt
utils/ethosu_logd/: CMakeLists.txt  dev_mem.cpp  dev_mem.hpp  main.cpp
utils/inference_runner/: CMakeLists.txt  inference_runner.cpp  interpreter_runner.cpp
utils/inference_runner/common/: image_decode_bmp.cpp  pre_post_processing.h
